Fix datepicker styling on mobile

--- a/scss/_builddatetime.scss
+++ b/scss/_builddatetime.scss
@@ -1,2 +1,2 @@
-$builddatetime: "160707095505";
+$builddatetime: "160707113522";
 
